# personal_projects

./: .gitignore  README.md
backend_newspaper_api/: .gitignore  dune  dune-project  esy.json  main.ml
backend_newspaper_api/src/database/: database.ml  dune
clojure_app/: README.md
clojure_app/doc/: intro.md
clojure_app/src/clojure_app/: core.clj
clojure_app/test/clojure_app/: core_test.clj
cryptalert/: CHANGELOG.md  README.md  project.clj
cryptalert/.calva/output-window/: output.calva-repl
cryptalert/.lsp/: sqlite.db
graphql-rust/: Cargo.toml  README.md
graphql-rust/migrations/2021-05-18-015339_create_members/: down.sql  up.sql
graphql-rust/src/: main.rs  schema.rs
graphql-rust/src/contract/: testContract.sol
graphql-rust/src/graphql/: graphql_schema.rs
learning_ml/: README.md  dune  esy.json
learning_ml/_build/: .db  .digest-db  log
learning_ml/_build/.aliases/default/: all-00000000000000000000000000000000  install-00000000000000000000000000000000  runtest-00000000000000000000000000000000
learning_ml/_build/default/: Hello.ml  dune-project  esy.json  hello.opam
learning_ml/_build/default/.dune/: configurator  configurator.v2
learning_ml/_build/default/.merlin-conf/: exe-Hello
learning_ml/_build/default/linear_regression/: dune  linear_regression.cma  linear_regression.cmxa  linear_regression.cmxs  (+1 more)
learning_ml/_esy/default/: build  install  installation.json  pnp.js
learning_ml/esy.lock/: index.json
learning_ml/linear_regression/: lin_reg.ml
node_rest_api_test/: package.json
node_rest_api_test/src/: index.ts
(+97 files in other folders)
