[package]
name = "graphql-rust"
version = "0.1.0"
authors = ["Lucas Dalbonio <dalbonio2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
juniper = "0.15.4"
actix-web = "3.3.2"
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.14"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
actix-cors = "0.5.4"
tokio-postgres = "0.7.2"
postgres = "0.15.2"